# no_coolterm

./: .pre-commit-config.yaml  build.bat  main.py  main_cmd.py  main_gui.py  main_gui.spec  main_window.py  modbus_con_testing.py  modbus_terminal.py  modbus_terminal.spec  pyproject.toml  requirements.txt
gui/: gui.py  modbus_table.py  style_dark_theme.qss  style_light_theme.qss
gui/main_window/: main_window.py  styles.qss
gui/main_window/ui/: mainwindow.ui
gui/main_window/ui_gen/: main_window_design.py
gui/styles/: style_dark_theme.qss  style_light_theme.qss
modbus/: client.py
modbus_core/: modbus_controller.py  modbus_rtu.py
serial_core/: port_scanner.py  serial_config.py  serial_manage.py  serial_worker.py
src/: ModbusTerminal.spec  gui.py  main.py
src/modbus_core/: __init__.py  modbus_engine.py  modbus_parser.py  modbus_rtu.py  serial_manager.py
tests/: modbuscontroller_test.py
utils/: get_resource_path.py  style_loader.py
