[project]
name = "no-coolterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyinstaller>=6.20.0",
    "pyqt6>=6.11.0",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "black>=26.5.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]
