[project]
name = "no-coolterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyinstaller>=6.20.0",
    "pyqt6>=6.11.0",
    "pyserial>=3.5",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]
